Fix java 8